--- a/BaiGiai/main.tex
+++ b/BaiGiai/main.tex
@@ -76,11 +76,11 @@
 \hline
 \textbf{Họ và tên} & \textbf{Phân công bài tập} \\ 
 \hline
-Nguyễn Xuân Phát & Câu 1, 2, 3 \\ 
+Nguyễn Xuân Phát & Câu 3, 4, 5, 6 \\ 
 \hline
-Nguyễn Thanh Duy & Câu 4, 5, 6, 10 \\ 
+Nguyễn Thanh Duy & Câu 2, 7, 8, 9, 10 \\ 
 \hline
-Ve Samy & Câu 7, 8, 9, 10 \\ 
+Ve Samy & Câu 1, 11, 12, 13, 14 \\ 
 \hline
 \end{tabular}
 \end{center}
